# csgo_bot

./: LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
csazure/: __init__.py  callbacks.py
discord/: main.py
ec2/: __init__.py
server/: __init__.py
