[tool.poetry]
name = "csgo_bot"
version = "0.1.0"
description = "Bot to trigger CSGO Dedicated Server"
authors = ["CoolFool"]

[tool.poetry.dependencies]
python = "^3.9"
adal = "^1.2.7"
aiohttp = "^3.7.4"
async-timeout = "^3.0.1"
attrs = "^21.2.0"
autopep8 = "^1.5.7"
azure-common = "^1.1.27"
azure-core = "^1.17.0"
azure-identity = "^1.6.0"
azure-mgmt-compute = "^22.1.0"
azure-mgmt-core = "^1.3.0"
azure-mgmt-network = "^19.0.0"
azure-mgmt-resource = "^19.0.0"
certifi = "^2021.5.30"
cffi = "^1.14.6"
chardet = "^4.0.0"
charset-normalizer = "^2.0.4"
cryptography = "^3.4.7"
"discord.py" = "^1.7.3"
idna = "^3.2"
isodate = "^0.6.0"
msal = "^1.13.0"
msal-extensions = "^0.3.0"
msrest = "^0.6.21"
msrestazure = "^0.6.4"
multidict = "^5.1.0"
oauthlib = "^3.2.1"
pycodestyle = "^2.7.0"
pycparser = "^2.20"
PyJWT = "^2.1.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
requests-oauthlib = "^1.3.0"
six = "^1.16.0"
toml = "^0.10.2"
typing-extensions = "^3.10.0"
urllib3 = "^1.26.6"
yarl = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
